--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioStanze.tex
@@ -5,7 +5,7 @@
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video l'insieme delle stanze registrate nel sistema;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di visualizzazione delle stanze registrate nell'applicazione web;
-    \item \textbf{Postcondizione:} l'amministratore visualizza tutti i dettagli della stanze registrate all'interno del sistema;
+    \item \textbf{Postcondizione:} l'amministratore visualizza tutte le stanze registrate all'interno del sistema;
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore visualizza un elenco delle stanze precedentemente inserite nel sistema.
@@ -144,7 +144,7 @@
     \begin{itemize}
         \item l'amministratore visualizza un elenco delle stanze precedentemente inserite nel sistema;
         \item l'amministratore seleziona una stanza registrata nel sistema per visualizzarne le funzionalità;
-        \item l'amministratore visualizza a video tutte le informazioni disponibili per la stanza selezionata, quali codice identificativo stanza (UC-13.1 Visualizzazione codice stanza), stato postazioni (UC-13.2 Visualizzazione stato postazioni) ed eventuali utenti presenti al suo interno (UC-13.3 Visualizzazione utenti presenti nella singola stanza).
+        \item l'amministratore visualizza a video tutte le informazioni disponibili per la stanza selezionata, quali codice identificativo stanza (UC-13.1 Visualizzazione codice stanza), stato postazioni (UC-13.2 Visualizzazione panoramica postazioni interne ad una stanza) ed eventuali utenti presenti al suo interno (UC-13.3 Visualizzazione utenti presenti nella singola stanza).
     \end{itemize}
 \end{itemize}
 
@@ -160,7 +160,8 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-13.2 Visualizzazione stato postazioni}
+%TODO check
+\paragraph{UC-13.2 Visualizzazione panoramica postazioni interne ad una stanza}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video lo stato delle postazioni all'interno di una stanza precedentemente selezionata;
