--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
@@ -13,7 +13,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.1 Ricerca postazione per codice identificativo}
+\paragraph{UC-20.1 Visualizzazione postazione per codice identificativo}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione censita nel sistema tramite codice identificativo;
@@ -27,7 +27,7 @@
 \end{itemize}
 
 
-\paragraph{UC-20.2 Ricerca postazioni prenotate}
+\paragraph{UC-20.2 Visualizzazione postazioni prenotate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione prenotata censita nel sistema;
@@ -40,7 +40,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.3 Ricerca postazioni occupate}
+\paragraph{UC-20.3 Visualizzazione postazioni occupate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione occupata censita nel sistema;
@@ -53,7 +53,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.4 Ricerca postazioni libere}
+\paragraph{UC-20.4 Visualizzazione postazioni libere}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione libera censita nel sistema;
@@ -66,7 +66,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.5 Ricerca postazioni igienizzate}
+\paragraph{UC-20.5 Visualizzazione postazioni igienizzate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione igienizzata censita nel sistema;
@@ -79,7 +79,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.6 Ricerca postazioni sporche}
+\paragraph{UC-20.6 Visualizzazione postazioni sporche}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione sporca censita nel sistema;
@@ -92,7 +92,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.7 Ricerca postazioni abilitate}
+\paragraph{UC-20.7 Visualizzazione postazioni abilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione abilitata censita nel sistema;
@@ -105,7 +105,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.8 Ricerca postazioni disabilitate}
+\paragraph{UC-20.8 Visualizzazione postazioni disabilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ricercare una postazione disabilitata censita nel sistema;
